--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tienda",
   "version": "0.1.0",
-  "homepage": "https://hidalgobri.github.io/estore",
+  "homepage": "https://hidalgobri.github.io/estore/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
